common-applications/control/community-certification-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: community-talent-certification-it-system
  name: community-talent-certification-it-system
