common-applications/control/community-certification-system/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: website-ingress
  namespace: community-talent-certification-it-system
spec:
  tls:
    - hosts:
      - talent-assessment.openeuler.org
      secretName: website-tls
  rules:
    - host: talent-assessment.openeuler.org
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 8080
          path: /
